[package]
name = "billy-ray"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A tiny terminal dialogue inspired by Trading Places"
readme = "README.md"
repository = "https://github.com/openapi/openapi-cli"
homepage = "https://github.com/openapi/openapi-cli"
keywords = ["cli", "dialogue", "easter-egg", "terminal"]
categories = ["command-line-interface"]

[lib]
name = "billy_ray"
path = "src/lib.rs"
